--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "pinia": "^3.0.3",
     "sass": "^1.92.0",
     "vue": "^3.5.18",
+    "vue-i18n": "^12.0.0-alpha.3",
     "vue-router": "^4.5.1",
     "vuetify": "^3.9.7"
   },
