--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "cypress": "^15.2.0",
     "eslint": "^9.35.0",
     "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-jsdoc": "^60.0.0",
     "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-vue": "^10.4.0",
     "prettier": "^3.6.2",
