--- a/backend/package.json
+++ b/backend/package.json
@@ -6,8 +6,6 @@
   "main": "index.js",
   "scripts": {
     "test": "cross-env NODE_ENV=test jest --detectOpenHandles --forceExit",
-    "start": "node src/server.js",
-    "dev": "nodemon src/server.js",
     "lint": "eslint . --ext .js",
     "lint:fix": "eslint . --ext .js --fix",
     "lint:fix:jsdoc": "eslint --ext .js . --fix --rule 'jsdoc/require-jsdoc:warn'",
@@ -33,6 +31,7 @@
     "@types/jest": "^30.0.0",
     "babel-jest": "^30.1.2",
     "cross-env": "^10.0.0",
+    "electron": "^38.1.2",
     "eslint": "^9.35.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-import-resolver-alias": "^1.1.2",
