--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "electron/main.js",
   "type": "module",
   "scripts": {
-    "dev": "concurrently -k -n backend,frontend -c blue,green \"NODE_ENV=development nodemon backend/src/server.js\" \"vite frontend\"",
+    "dev": "NODE_ENV=development nodemon backend/src/server.js",
     "start:electron": "electron .",
     "build:frontend": "cd frontend && npm run build",
     "copy-build": "rm -rf backend/public && cp -r frontend/dist backend/public",
@@ -42,6 +42,9 @@
     "files": [
       "electron/**",
       "package.json"
-    ]
+    ],
+    "linux": {
+      "target": ["snap"]
+    }
   }
 }
