First working snap deamon
- With the snap/snapcraft.yaml you're able to build the first snap deamon successfully

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "deconz-app-backend-test",
+  "name": "deconz-webserver",
   "type": "module",
   "version": "1.0.0",
   "description": "npm init -y npm install express sqlite3 bcrypt jsonwebtoken dotenv cors npm install --save-dev nodemon",
