--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -9,30 +9,44 @@ description: |
   store.
 
 grade: devel
-confinement: devmode
+confinement: strict
+
+# platforms:
+#   amd64:
+#     build-on: [amd64]
+#   arm64:
+#     build-on: [amd64]
+#     build-for: [arm64]
+#   armhf:
+#     build-on: [amd64]
+#     build-for: [armhf]
 
 apps:
   deconz-webserver:
     command: lib/node_modules/deconz-webserver/command.sh
     daemon: simple
     restart-condition: always
+    plugs:
+      - network-bind
+      # - network
 
   my-electron-app:
     command: command.sh
     extensions: [gnome] 
     plugs:
-      - desktop
-      - desktop-legacy
-      - home
-      - x11
-      - wayland
-      - unity7
       - browser-support
-      - network
-      - gsettings
-      - audio-playback
-      - pulseaudio
-      - opengl
+      - network-bind
+    #   - desktop
+    #   - desktop-legacy
+      - home   (my-electron-app:158832): IBUS-WARNING **: 20:16:18.685: open /home/tom/snap/deconz-webserver/x1/.config/ibus/bus failed: Permission denied
+    #   - x11
+    #   - wayland
+    #   - unity7
+    #   - network
+    #   - gsettings
+    #   - audio-playback
+    #   - pulseaudio
+    #   - opengl
     environment:
       DISABLE_WAYLAND: '1'
       PATH: $SNAP/usr/sbin:$SNAP/usr/bin:$SNAP/sbin:$SNAP/bin:$PATH
