--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "clean": "rm -rf node_modules dist .vite .cache .eslintcache && rm -f package-lock.json",
+
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
@@ -13,6 +15,7 @@
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "axios": "^1.12.2",
     "jwt-decode": "^4.0.0",
     "pinia": "^3.0.3",
     "sass": "^1.92.0",
