--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -8,7 +8,7 @@ description: |
   we live in tweetspace and your description wants to look good in the snap
   store.
 
-grade: devel
+grade: stable
 confinement: strict
 
 platforms:
@@ -17,8 +17,12 @@ platforms:
     build-for: [amd64]
 
   armhf:
-    build-on: [armhf]
+    build-on: [arm64]    
     build-for: [armhf]
+
+  arm64:
+    build-on: [arm64]
+    build-for: [arm64]
 
 apps:
   deconz-webserver:
@@ -28,16 +32,16 @@ apps:
     plugs:
       - network-bind
 
-  # my-electron-app:
-  #   command: electron/command.sh
-  #   extensions: [gnome] 
-  #   plugs:
-  #     - browser-support
-  #     - network-bind
-  #     - home
-  #     - unity7
-  #     - opengl
-  #     - bluez
+  my-electron-app:
+    command: electron/command.sh
+    extensions: [gnome] 
+    plugs:
+      - browser-support
+      - network-bind
+      - home
+      - unity7
+      - opengl
+      - bluez
 
 parts:
   frontend:
@@ -61,7 +65,7 @@ parts:
     plugin: npm
     source: .
     npm-include-node: true
-    npm-node-version: "22.19.0"
+    npm-node-version: "22.11.0"
     after: [frontend]
     build-snaps:
       - node/22/stable
@@ -88,27 +92,41 @@ parts:
       craftctl default
 
 
-  # electron-app:
-  #   plugin: nil
-  #   source: .
-  #   after: [frontend]
-  #   build-snaps:
-  #     - node/22/stable
-  #   override-build: |
-  #     # export PATH=/snap/bin:$PATH
+  electron-app:
+    plugin: nil
+    source: .
+    after: [frontend]
+    build-snaps:
+      - node/22/stable
+    build-packages:
+      - build-essential
+      - python3
+      - python3-pip
+      - libsqlite3-dev
+      - pkg-config
+    override-build: |
+      # export PATH=/snap/bin:$PATH
 
-  #     # Accoring to package.json (electron build section) the electron app tries to get frontend
-  #     # from frontend/dist folder (relatively to where package.json lies)
-  #     mkdir -p $CRAFT_PART_BUILD/frontend/dist
-  #     cp -r $SNAPCRAFT_STAGE/frontend/dist/* $CRAFT_PART_BUILD/frontend/dist
+      # Find the actual electron build folder
+      ELECTRON_BUILD_DIR=$(find ./dist -maxdepth 1 -type d -name "*linux*unpacked*" | head -n 1)
 
-  #     # Install and build
-  #     npm install
-  #     npm run build:electron
+      if [ -z "$ELECTRON_BUILD_DIR" ]; then
+          echo "Error: Electron build folder not found!"
+          exit 1
+      fi
 
-  #     # Copy output to $SNAPCRAFT_PART_INSTALL
-  #     mkdir $SNAPCRAFT_PART_INSTALL/electron
-  #     cp -r ./dist/linux-unpacked/* $SNAPCRAFT_PART_INSTALL/electron/
+      # According to package.json (electron build section) the electron app tries to get frontend
+      # from frontend/dist folder (relative to where package.json lies)
+      mkdir -p $CRAFT_PART_BUILD/frontend/dist
+      cp -r $SNAPCRAFT_STAGE/frontend/dist/* $CRAFT_PART_BUILD/frontend/dist
 
-  #     # Copy the shellscripts
-  #     cp -r ./electron/command-shellscripts/* $SNAPCRAFT_PART_INSTALL/electron/
+      # Install and build
+      npm install
+      npm run build:electron
+
+      # Copy output to $SNAPCRAFT_PART_INSTALL
+      mkdir -p $SNAPCRAFT_PART_INSTALL/electron
+      cp -r "$ELECTRON_BUILD_DIR"/* $SNAPCRAFT_PART_INSTALL/electron/
+
+      # Copy the shell scripts
+      cp -r ./electron/command-shellscripts/* $SNAPCRAFT_PART_INSTALL/electron/
